Modified server name

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,7 +15,7 @@
     <br />
     <div class="log-result" id="log-result"></div>
     <div class="terminal">
-      <label for="cmd-input">127.0.0.1:16379 ></label>
+      <label for="cmd-input">ledis-server ></label>
       <input class="cmd-input" type="text" id="cmd" autofocus="autofocus" spellcheck="false">
     </div>
   </div>
